Added some new menu links in footer and header to prepare for the public

--- a/ckan/custom_templates/footer.html
+++ b/ckan/custom_templates/footer.html
@@ -9,9 +9,9 @@
               <li><a href="#">{{ _('Accessibility') }}</a></li>
               <li><a href="#">{{ _('Code of conduct') }}</a></li>
               <li><a href="#">{{ _('Moderation policy') }}</a></li>
-              <li><a href="#">{{ _('FAQ') }}</a></li>
+              <li><a href="/faq">{{ _('FAQ') }}</a></li>
               <li><a href="#">{{ _('Privacy') }}</a></li>
-              <li><a href="#">{{ _('Contact us') }}</a></li>
+              <li><a href="/contact">{{ _('Contact us') }}</a></li>
               <li><a href="#">{{ _('Consultation') }}</a></li>
             {% endblock %}
           </ul>
