--- a/ckan/custom_templates/header.html
+++ b/ckan/custom_templates/header.html
@@ -29,7 +29,7 @@
               ('search', _('Datasets')),
               ('organizations_index', _('Organizations')),
               ('group_index', _('Groups')),
-              ('forum', _('Forum')),
+	      ('app', _('App')),
               ('about', _('About'))
             ) }}
           </ul>
