Added award logo to page footer

--- a/ckan/custom_templates/footer.html
+++ b/ckan/custom_templates/footer.html
@@ -17,6 +17,7 @@
           </ul>
         {% endblock %}
       </nav>
+      <a class="hide-text award-smart-city-footer-logo" href="http://www.itaward.dk/default.asp?Id=320&cpc=1">Nomineret Årets Smart City-pris 2013</a>
       <div class="attribution">
         {% block footer_attribution %}
         {% trans %}<p><strong>Powered by</strong></p>{% endtrans %}
