--- a/ckan/custom_templates/footer.html
+++ b/ckan/custom_templates/footer.html
@@ -11,9 +11,11 @@
           </ul>
         {% endblock %}
       </nav>
-      <a class="hide-text award-smart-city-footer-logo" href="http://www.itaward.dk/default.asp?Id=320&cpc=1">Nomineret Årets Smart City-pris 2013</a>
-      <a class="hide-text made-with-aarhus-footer-logo" href="http://www.aarhus.dk/da/omkommunen/english.aspx">Made with Aarhus - Danish for progress</a>      
-<div class="attribution">
+      <div class="attribution attribution-first">      
+        <a class="hide-text award-smart-city-footer-logo" href="http://www.itaward.dk/default.asp?Id=320&cpc=1">Nomineret Årets Smart City-pris 2013</a>
+        <a class="hide-text made-with-aarhus-footer-logo" href="http://www.aarhus.dk/da/omkommunen/english.aspx">Made with Aarhus - Danish for progress</a>      
+      </div>      
+      <div class="attribution attribution-second">
         {% block footer_attribution %}
         {% trans %}<p><strong>Powered by</strong></p>{% endtrans %}
         <a class="hide-text ckan-footer-logo" href="http://ckan.org">CKAN</a>
