Updated a link in footer

--- a/ckan/custom_templates/footer.html
+++ b/ckan/custom_templates/footer.html
@@ -29,7 +29,7 @@
       </div>
       <div class="footer-second">
         <div class="attribution attribution-first">      
-          <a class="hide-text made-with-aarhus-footer-logo" href="http://www.aarhus.dk/da/omkommunen/english.aspx">Made with Aarhus - Danish for progress</a> 
+          <a class="hide-text made-with-aarhus-footer-logo" href="http://www.smartaarhus.dk/">Made with Aarhus - Danish for progress</a> 
           <a class="hide-text award-smart-city-footer-logo" href="http://www.itaward.dk/default.asp?Id=320&amp;cpc=1">Nomineret Årets Smart City-pris 2013</a>
         </div>
         <div class="attribution attribution-second">
