--- a/ckan/custom_templates/home/index.html
+++ b/ckan/custom_templates/home/index.html
@@ -56,7 +56,7 @@
             <form class="dataset-search module-content clearfix" method="get" action="{% url_for controller='package', action='search' %}">
               <h3 class="heading">{{ _("Search Your Data") }}</h3>
               <span class="control-group search-giant">
-                <input type="text" class="search" name="q" value="{{ c.q }}" autocomplete="off" placeholder="{{ _('eg. Gold Prices') }}" />
+                <input type="text" class="search" name="q" value="{{ c.q }}" autocomplete="off" placeholder="f.eks. parkering" />
                 <button type="submit" value="{{ _('Search') }}">Submit</button>
               </span>
             </form>
