Changed some styling on the front page

--- a/ckan/custom_templates/home/index.html
+++ b/ckan/custom_templates/home/index.html
@@ -27,10 +27,10 @@
           {{ h.render_markdown(g.site_intro_text) }}
           {% else %}
             {% block home_primary_content %}
-              <h1 class="page-heading">{% block home_primary_heading %}{{ _("Velkommen til Aarhus' open data platform") }}{% endblock %}</h1>
+              <h1 class="page-heading">{% block home_primary_heading %}{{ _("Velkommen til ODAA") }}{% endblock %}</h1>
               <p>
               {% block home_primary_text %}
-                {% trans %}Her bliver åbne data fra Aarhus-området gjort frit tilgængelige, så de er nemme at finde for dig. Vi  håber, at du vil forvandle de åbne data til nye og innovative services og fortælle om det her på platformen.
+                {% trans %}ODAA er en open data platform, hvor åbne data bliver gjort frit tilgængelige, så de er nemme for dig at finde. Vi håber, at du vil forvandle de åbne data til nye og innovative services og fortælle om det her på platformen.  Du kan læse mere under <a href="/about">Om</a> og <a href="/faq">FAQ</a>.  
                 {% endtrans %}
               {% endblock %}
               </p>
