More style, added footer/conditions

--- a/ckan/custom_templates/footer.html
+++ b/ckan/custom_templates/footer.html
@@ -7,7 +7,8 @@
             <ul class="unstyled row-fluid">
               {% block footer_links %}
                 <li><a href="/faq">{{ _('FAQ') }}</a></li>
-                <li><a href="/contact">{{ _('Contact us') }}</a></li>
+                <li><a href="/contact">{{ _('Kontakt') }}</a></li>
+                <li><a href="/conditions">{{ _('Vilkår og betingelser') }}</a></li>
               {% endblock %}
             </ul>
           {% endblock %}
