--- a/ckan/custom_templates/page.html
+++ b/ckan/custom_templates/page.html
@@ -2,105 +2,36 @@
 
 {%- block page -%}
 
-  {#
-  Override the header on a page by page basis by extending this block. If
-  making sitewide header changes it is preferable to override the header.html
-  file.
-  #}
-  {%- block header %}
-    {% include "header.html" %}
-  {% endblock -%}
-
-  {# The content block allows you to replace the content of the page if needed #}
-  {%- block content %}
-    {% block maintag %}<div role="main">{% endblock %}
-      <div id="content" class="container">
-        {% block main_content %}
-          {% block flash %}
-            {% set flash_messages = h.flash.pop_messages() | list %}
-            <div class="flash-messages">
-              {% for message in flash_messages %}
-                <div class="alert fade in {{ message.category }}">
-                  {{ h.literal(message) }}
-                </div>
-              {% endfor %}
-            </div>
-          {% endblock %}
-
-          {% block toolbar %}
-            <div class="toolbar">
-              {% block breadcrumb %}
-                {% if self.breadcrumb_content() | trim %}
-                  <ol class="breadcrumb">
-                    {% snippet 'snippets/home_breadcrumb_item.html' %}
-                    {% block breadcrumb_content %}{% endblock %}
-                  </ol>
-                {% endif %}
-              {% endblock %}
-              {% block actions %}
-                <ul class="actions pull-right">
-                  {% block actions_content %}{% endblock %}
-                </ul>
-              {% endblock %}
-            </div>
-          {% endblock %}
-
-          {% block primary %}
-            <div class="primary">
-              {#
-              The primary_content block can be used to add content to the page.
-              This is the main block that is likely to be used within a template.
-
-              Example:
-
-                {% block primary_content %}
-                  <h1>My page content</h1>
-                  <p>Some content for the page</p>
-                {% endblock %}
-              #}
-              {% block primary_content %}{% endblock %}
-            </div>
-          {% endblock %}
-
-          {% block secondary %}
-            <aside class="secondary">
-              {#
-              The secondary_content block can be used to add content to the
-              sidebar of the page. This is the main block that is likely to be
-              used within a template.
-
-              Example:
-
-                {% block secondary_content %}
-                  <h2>A sidebar item</h2>
-                  <p>Some content for the item</p>
-                {% endblock %}
-              #}
-              {% block secondary_content %}{% endblock %}
-	      <a class="twitter-timeline"  href="https://twitter.com/OpenDataAarhus" height="380" data-widget-id="319794378895925248" data-chrome="nofooter">Tweets by @OpenDataAarhus</a>
-<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-            </aside>
-          {% endblock %}
-        {% endblock %}
+  <div id="page" class="page">
+    <header class="site-header">
+      <section class="header-wrapper">
+        <div class="header-inner">
+          <a href="/" class="logo"><img alt="" src="/sites/odaa.dk/themes/odaa/logo.png"></a>
+          <div class="search-form">
+            <form>
+              <input type="text" placeholder="Søg..." class="search-form-text" />
+              <input type="submit" value="Søg" class="button" />
+            </form>
+          </div>
+          <ul class="main-menu">
+            <li><a href="#" class="menu-item"><span>Forsiden</span></a></li>
+            <li><a href="#" class="menu-item"><span>Datasæt</span></a></li>
+            <li><a href="#" class="menu-item"><span>Organisation</span></a></li>
+            <li><a href="#" class="menu-item"><span>Grupper</span></a></li>
+            <li><a href="#" class="menu-item"><span>App</span></a></li>
+            <li><a href="#" class="menu-item active"><span>Om</span></a></li>
+          </ul>
+          <ul class="secondary-menu">
+            <li><a href="#" class="menu-item"><span>Login</span></a></li>
+            <li><a href="#" class="menu-item last"><span>Opret bruger</span></a></li>
+          </ul>
+        </div>
+      </section>
+    </header>
+    <div class="content-wrapper">
+      <div class="content-inner">
+        {% block primary_content %}{% endblock %}
       </div>
     </div>
-  {% endblock -%}
-
-  {#
-  Override the footer on a page by page basis by extending this block. If
-  making sitewide header changes it is preferable to override the footer.html-u
-  file.
-  #}
-  {%- block footer %}
-    {% include "footer.html" %}
-  {% endblock -%}
+  </div>
 {%- endblock -%}
-
-{%- block scripts %}
-    {% resource 'base/main' %}
-    {% resource 'base/ckan' %}
-    {% if g.tracking_enabled %}
-        {% resource 'base/tracking.js' %}
-    {% endif %}
-  {{ super() }}
-{% endblock -%}
