--- a/ckan/custom_templates/page.html
+++ b/ckan/custom_templates/page.html
@@ -8,8 +8,8 @@
         <div class="header-inner">
           <a href="/" class="logo"><img alt="" src="/sites/odaa.dk/themes/odaa/logo.png"></a>
           <div class="search-form">
-            <form>
-              <input type="text" placeholder="Søg..." class="search-form-text" />
+            <form action="/dataset" method="get">
+              <input type="text" name="q" placeholder="Søg..." class="search-form-text" />
               <input type="submit" value="Søg" class="button" />
             </form>
           </div>
