Added base templating.

--- a/ckan/custom_templates/package/read_base.html
+++ b/ckan/custom_templates/package/read_base.html
@@ -1,3 +1,5 @@
+{% extends "package/base.html" %}
+
 <div class="page--content-wrapper">
   <ul class="dataset--tabs">
     {% block page_header_tabs %}
