Corrected templates with endblock.

--- a/ckan/custom_templates/package/read.html
+++ b/ckan/custom_templates/package/read.html
@@ -7,7 +7,8 @@
     </div>
   {% endif %}
   
-  {% block primary_content_inner %}
+  {% block primary_content_inner %}{% endblock %}  
+  
 </section>
 
 {% block package_resources %}
