--- a/ckan/custom_templates/package/read_base.html
+++ b/ckan/custom_templates/package/read_base.html
@@ -10,7 +10,7 @@
  </ul>
   {% block primary_content_inner %}{% endblock %}
 <div class="secondary-content">
-  {% block secondary_content %}
+  {% block secondary_content %}{% endblock %}
 </div>
 
 {% snippet 'snippets/organization, organization=c.group_dict %}
