Corrected templates with endings.

--- a/ckan/custom_templates/package/read_base.html
+++ b/ckan/custom_templates/package/read_base.html
@@ -13,10 +13,10 @@
   {% block secondary_content %}{% endblock %}
 </div>
 
-{% snippet 'snippets/organization, organization=c.group_dict %}
+{% snippet 'snippets/organization', organization=c.group_dict %}
 
-{% snippet 'snippets/group, group=c.group_dict %}
+{% snippet 'snippets/group', group=c.group_dict %}
 
-{% snippet 'snippets/social %}
+{% snippet 'snippets/social' %}
 
-{% snippet 'snippets/license %}
+{% snippet 'snippets/license' %}
