--- a/ckan/custom_templates/package/read.html
+++ b/ckan/custom_templates/package/read.html
@@ -1,15 +1,18 @@
 {% extends "package/read_base.html" %}
-<section class="page--content">
-  <h1 class="page--title">{{ pkg.title or pkg.name }}</h1>
-  {% if c.pkg_notes_formatted %}
-    <div class="notes embedded-content">
-      {{ c.pkg_notes_formatted }}
-    </div>
-  {% endif %}
-  
-  {% block primary_content_inner %}{% endblock %}  
-  
-</section>
+
+{% block primary_content_inner %}
+  <section class="page--content">
+    <h1 class="page--title">{{ pkg.title or pkg.name }}</h1>
+    {% if c.pkg_notes_formatted %}
+      <div class="notes embedded-content">
+        {{ c.pkg_notes_formatted }}
+      </div>
+    {% endif %}
+
+    {% block primary_content_inner %}{% endblock %}  
+
+  </section>
+{% endblock %}
 
 {% block package_resources %}
   {% snippet "package/snippets/resources_list.html", pkg=pkg, resources=pkg.resources %}
