--- a/ckan/custom_templates/page.html
+++ b/ckan/custom_templates/page.html
@@ -30,7 +30,10 @@
     </header>
     <div class="content-wrapper">
       <div class="content-inner">
-        {% block primary_content %}{% endblock %}
+        {% block content %}
+          {% block primary_content %}{% endblock %}
+          {% block secondary_content %}{% endblock %}
+        {% endblock %}
       </div>
     </div>
   </div>
