--- a/ckan/custom_templates/package/snippets/resources_list.html
+++ b/ckan/custom_templates/package/snippets/resources_list.html
@@ -1,4 +1,4 @@
-section class="dataset--data-resources">
+<section class="dataset--data-resources">
   <h2 class="section-title">{{ _('Data and Resources') }}</h2>
   {% if resources %}
     <ul class="dataset--list">
