--- a/ckan/custom_templates/base.html
+++ b/ckan/custom_templates/base.html
@@ -11,6 +11,7 @@
   <head{% block headtag %}{% endblock %}>
     <meta name="viewport" content="width=device-width">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>
       {%- block title -%}
         {%- block subtitle %}{% endblock -%}
