Changed cit to comments--list--cid

--- a/ckan/custom_templates/package/snippets/comment.html
+++ b/ckan/custom_templates/package/snippets/comment.html
@@ -9,6 +9,7 @@
   <div class="comments--wrapper" id="34567">
     <ul class="comments--list">
       <li class="comments--list-item">
+        <div class="comments--list--cid"></div>
         <a href="#" class="comments--list-image"><img width="30" height="30" src="//gravatar.com/avatar/f9879d71855b5ff21e4963273a886bfc?s=30&amp;d=identicon"></a>
         <h3 class="comments--list-author"><a href="#">Name</a></h3>
         <a href="#commentlink" class="comments--list-posted">20. juli 2013 @ 14:57</a>
