--- a/ckan/custom_templates/package/snippets/comment.html
+++ b/ckan/custom_templates/package/snippets/comment.html
@@ -6,7 +6,7 @@
     <a href="#" class="list--action-sort-hot"><i class="icon-thumbs-up-alt"></i>{{ _('Sort: Best') }}</a>
     <a href="#postcomment" class="list--action-create"><i class="icon-comment-alt"></i>{{ _('Write a comment') }}</a>
   </div>
-  <div class="comments--wrapper" id="34567">
+  <div class="comments--wrapper" id="{{ pkg_dict.id }}">
     <ul class="comments--list">
       <li class="comments--list-item">
         <div class="comments--list--cid"></div>
