--- a/ckan/custom_templates/page.html
+++ b/ckan/custom_templates/page.html
@@ -38,3 +38,12 @@
     </div>
   </div>
 {%- endblock -%}
+
+{%- block scripts %}
+    {% resource 'base/main' %}
+    {% resource 'base/ckan' %}
+    {% if g.tracking_enabled %}
+        {% resource 'base/tracking.js' %}
+    {% endif %}
+  {{ super() }}
+{% endblock -%}
