--- a/ckan/custom_templates/package/search.html
+++ b/ckan/custom_templates/package/search.html
@@ -7,16 +7,16 @@
       <section class="page--content">
         <h1 class="page--title">{{ _('Find dataset') }}</h1>
       </section>
-      <div class="search-form--content-block">
-        <form action="/dataset" method="get">
+      <form action="/dataset" method="get" class="dataset-search" data-module="select-switch" id="dataset-search">
+        <div class="search-form--content-block">
           <label class="search-form--content-block--label">{{ _('Search in datasets') }}</label>
           <input name="q" type="text" placeholder="F.eks. parkering, bygninger eller lignende" class="search-form--content-block--input" />
           <input type="submit" class="search-form--content-block--button" value="Søg" />
-        </form>
-      </div>
-      <div class="dataset--list-actions">
-        {{ h.snippet('snippets/sort_by.html', sort=c.sort_by_selected) }}
-     </div>
+        </div>
+        <div class="dataset--list-actions">
+          {{ h.snippet('snippets/sort_by.html', sort=c.sort_by_selected) }}
+        </div>
+      </form>
       <section class="dataset--list-wrapper">
         {{ h.snippet('snippets/package_list.html', packages=c.page.items) }}
         {{ c.page.pager(q=c.q) }}
