--- a/ckan/custom_templates/base.html
+++ b/ckan/custom_templates/base.html
@@ -23,6 +23,15 @@
     <script src="http://code.jquery.com/jquery-1.7.2.min.js"></script>
     <script src="/sites/odaa.dk/themes/odaa/js/pure_min.js"></script>
     <script src="/sites/odaa.dk/themes/odaa/js/comment.js"></script>
+    <script>
+      (function($) {
+        $.ajax({
+          url: 'node/1?regions=navigation',
+        }).done(function (data) {
+          $('#context-block-region-navigation').html(data);
+        }); 
+      })(jQuery);
+    </script>
   </head>
 
   <body class="left-sidebar" {% block bodytag %} data-site-root="{{ h.url('/', locale='default', qualified=true) }}" data-locale-root="{{ h.url('/', qualified=true) }}" data-api-root="{{ g.api_url }}"{% endblock %}>
