Dynamic menu with fallback.

--- a/ckan/custom_templates/page.html
+++ b/ckan/custom_templates/page.html
@@ -13,18 +13,12 @@
               <input type="submit" value="Søg" class="button" />
             </form>
           </div>
-          <ul class="main-menu">
-            <li><a href="/" class="menu-item"><span>Forsiden</span></a></li>
-            <li><a href="/dataset" class="menu-item"><span>Datasæt</span></a></li>
-            <li><a href="#" class="menu-item"><span>Organisation</span></a></li>
-            <!--<li><a href="#" class="menu-item"><span>Grupper</span></a></li>
-            <li><a href="#" class="menu-item"><span>App</span></a></li>
-            <li><a href="#" class="menu-item active"><span>Om</span></a></li>-->
-          </ul>
-          <ul class="secondary-menu">
-            <li><a href="#" class="menu-item"><span>Login</span></a></li>
-            <li><a href="#" class="menu-item last"><span>Opret bruger</span></a></li>
-          </ul>
+          <div id="context-block-region-navigation">
+            <ul class="main-menu">
+              <li><a href="/" class="menu-item"><span>Forsiden</span></a></li>
+              <li><a href="/dataset" class="menu-item"><span>Datasæt</span></a></li>
+            </ul>
+          </div>
         </div>
       </section>
     </header>
