--- a/ckan/custom_templates/page.html
+++ b/ckan/custom_templates/page.html
@@ -13,12 +13,10 @@
               <input type="submit" value="Søg" class="button" />
             </form>
           </div>
-          <div id="context-block-region-navigation">
-            <ul class="main-menu">
-              <li><a href="/" class="menu-item"><span>Forsiden</span></a></li>
-              <li><a href="/dataset" class="menu-item"><span>Datasæt</span></a></li>
-            </ul>
-          </div>
+          <ul class="main-menu odaa-main-menu">
+            <li><a href="/" class="menu-item"><span>Forsiden</span></a></li>
+            <li><a href="/dataset" class="menu-item"><span>Datasæt</span></a></li>
+          </ul>
         </div>
       </section>
     </header>
