Added classes to formular for JS.

--- a/ckan/custom_templates/package/snippets/comment.html
+++ b/ckan/custom_templates/package/snippets/comment.html
@@ -22,11 +22,11 @@
         <form action="" method="">
           <div class="comments--post-field-wrapper">
             <label class="comments--post-label">{{ _('Username') }}</label>
-            <p>{{ _('Username') }}</p>
+            <p class="js-comment-username"></p>
           </div>
           <div class="comments--post-field-wrapper">
             <label class="comments--post-label">{{ _('E-mail') }}</label>
-            <p>email@example.com</p>
+            <p class="js-comment-email"></p>
           </div>
           <div class="comments--post-field-wrapper">
             <label class="comments--post-label">{{ _('Comment') }}</label>
