Minor bug in mail.

--- a/ckan/custom_templates/package/snippets/comment.html
+++ b/ckan/custom_templates/package/snippets/comment.html
@@ -26,7 +26,7 @@
           </div>
           <div class="comments--post-field-wrapper">
             <label class="comments--post-label">{{ _('E-mail') }}</label>
-            <p class="js-comment-email"></p>
+            <p class="js-comment-mail"></p>
           </div>
           <div class="comments--post-field-wrapper">
             <label class="comments--post-label">{{ _('Comment') }}</label>
