Setting 'Dataset' menu link to active.

--- a/ckan/custom_templates/base.html
+++ b/ckan/custom_templates/base.html
@@ -33,6 +33,7 @@
           menu.before(data);
           menu.remove();
           $('.context-block-region').hide();
+          $('.menu-mlid-503').addClass('active');
         }); 
       })(jQuery);
     </script>
