--- a/ckan/custom_templates/package/snippets/comment.html
+++ b/ckan/custom_templates/package/snippets/comment.html
@@ -6,7 +6,7 @@
     <a href="#" class="list--action-sort-hot"><i class="icon-thumbs-up-alt"></i>{{ _('Sort: Best') }}</a>
     <a href="#postcomment" class="list--action-create"><i class="icon-comment-alt"></i>{{ _('Write a comment') }}</a>
   </div>
-  <div class="comments--wrapper" id="{{ pkg_dict.id }}">
+  <div class="comments--wrapper" data="{{ pkg_dict.id }}">
     <ul class="comments--list">
       <li class="comments--list-item">
         <div class="comments--list--cid"></div>
@@ -16,27 +16,27 @@
         </div>
       </li>
     </ul>
-    <section class="comments--post-comment-wrapper">
-      <h2 class="comments--post-comment-header"><a name="postcomment">{{ _('Write a comment') }}</a></h2>
-      <div class="comments--post-comment">
-        <form action="" method="">
-          <div class="comments--post-field-wrapper">
-            <label class="comments--post-label">{{ _('Username') }}</label>
-            <p class="js-comment-username"></p>
-          </div>
-          <div class="comments--post-field-wrapper">
-            <label class="comments--post-label">{{ _('E-mail') }}</label>
-            <p class="js-comment-mail"></p>
-          </div>
-          <div class="comments--post-field-wrapper">
-            <label class="comments--post-label">{{ _('Comment') }}</label>
-            <textarea placeholder="{{ _('Write your comment') }}" rows="6"></textarea>
-          </div>
-          <div class="comments--post-comment-actions">
-            <input type="submit" value="{{ _('Post comment') }}" class="button">
-          </div>
-        </form>
-      </div>
-    </section>
   </div>
+  <section class="comments--post-comment-wrapper">
+    <h2 class="comments--post-comment-header"><a name="postcomment">{{ _('Write a comment') }}</a></h2>
+    <div class="comments--post-comment">
+      <form action="" method="">
+        <div class="comments--post-field-wrapper">
+          <label class="comments--post-label">{{ _('Username') }}</label>
+          <p class="js-comment-username"></p>
+        </div>
+        <div class="comments--post-field-wrapper">
+          <label class="comments--post-label">{{ _('E-mail') }}</label>
+          <p class="js-comment-mail"></p>
+        </div>
+        <div class="comments--post-field-wrapper">
+          <label class="comments--post-label">{{ _('Comment') }}</label>
+          <textarea placeholder="{{ _('Write your comment') }}" rows="6"></textarea>
+        </div>
+        <div class="comments--post-comment-actions">
+          <input type="submit" value="{{ _('Post comment') }}" class="button">
+        </div>
+      </form>
+    </div>
+  </section>
 </section>
