--- a/ckan/custom_templates/page.html
+++ b/ckan/custom_templates/page.html
@@ -9,7 +9,7 @@
           <a href="/" class="logo"><img alt="" src="/sites/odaa.dk/themes/odaa/logo.png"></a>
           <div class="search-form">
             <form action="/dataset" method="get">
-              <input type="text" name="q" placeholder="Søg..." class="search-form-text" />
+              <input type="text" name="q" placeholder="{{ _('Search for dataset') }}..." class="search-form-text" />
               <input type="submit" value="Søg" class="button" />
             </form>
           </div>
