--- a/ckan/custom_templates/package/snippets/comment.html
+++ b/ckan/custom_templates/package/snippets/comment.html
@@ -2,8 +2,8 @@
   <h2 class="section-title">{{ _('Comment and debate') }}</h2>
   <p>{{ _('Join the debate! Remember to keep a sober tone so we can have a constructive debate.') }}</p>
   <div class="comments--list-actions">
-    <a href="#" class="list--action-sort-latest active"><i class="icon-ok"></i>{{ _('Sort: Latest') }}</a>
-    <a href="#" class="list--action-sort-hot"><i class="icon-thumbs-up-alt"></i>{{ _('Sort: Best') }}</a>
+    <!--<a href="#" class="list--action-sort-latest active"><i class="icon-ok"></i>{{ _('Sort: Latest') }}</a>
+    <a href="#" class="list--action-sort-hot"><i class="icon-thumbs-up-alt"></i>{{ _('Sort: Best') }}</a>-->
     <a href="#postcomment" class="list--action-create"><i class="icon-comment-alt"></i>{{ _('Write a comment') }}</a>
   </div>
   <div class="comments--wrapper" data="{{ pkg_dict.id }}">
