--- a/ckan/custom_templates/snippets/facet_list.html
+++ b/ckan/custom_templates/snippets/facet_list.html
@@ -43,7 +43,7 @@ alternative_url
             {% set label = label_function(item) if label_function else h.truncate(item.display_name, 22) %}
             {% set count = count_label(item['count']) if count_label else ('(%d)' % item['count']) %}
               <li class="spotbox-menu--list-item first">
-                <a href="{{ href }}" class="active"><i class="icon-check"></i>{{ label }} {{ count }}</a>
+                <a href="{{ href }}"><i class="icon-check"></i>{{ label }} {{ count }}</a>
               </li>
          {% endfor %}
         </ul>
