Changed remove all link.

--- a/ckan/custom_templates/snippets/facet_list.html
+++ b/ckan/custom_templates/snippets/facet_list.html
@@ -36,17 +36,21 @@ alternative_url
   <div class="spotbox-menu">
     <div class="spotbox-menu--inner">
       <h3 class="spotbox-menu--header"><i class="icon-filter"></i>{{ title or h.get_facet_title(name) }}</h3>
-      <p class="spotbox-menu--list-remove-all"><a href="#"><i class="icon-remove"></i>Fjern alle</a></p>
-        <ul class="spotbox-menu--list">
-          {% for item in items %}
-            {% set href = h.remove_url_param(name, item.name, extras=extras, alternative_url=alternative_url) if item.active else h.add_url_param(new_params={name: item.name}, extras=extras, alternative_url=alternative_url) %}
-            {% set label = label_function(item) if label_function else h.truncate(item.display_name, 22) %}
-            {% set count = count_label(item['count']) if count_label else ('(%d)' % item['count']) %}
-              <li class="spotbox-menu--list-item first">
-                <a href="{{ href }}"><i class="icon-check-empty"></i>{{ label }} {{ count }}</a>
-              </li>
-         {% endfor %}
-        </ul>
+      <p class="spotbox-menu--list-remove-all">
+        <a href="{{ h.remove_url_param(name, extras=extras, alternative_url=alternative_url) }}">
+          <i class="icon-remove"></i>{{ _('Clear All') }}
+        </a>
+      </p>
+      <ul class="spotbox-menu--list">
+        {% for item in items %}
+          {% set href = h.remove_url_param(name, item.name, extras=extras, alternative_url=alternative_url) if item.active else h.add_url_param(new_params={name: item.name}, extras=extras, alternative_url=alternative_url) %}
+          {% set label = label_function(item) if label_function else h.truncate(item.display_name, 22) %}
+          {% set count = count_label(item['count']) if count_label else ('(%d)' % item['count']) %}
+            <li class="spotbox-menu--list-item first">
+              <a href="{{ href }}"><i class="icon-check-empty"></i>{{ label }} {{ count }}</a>
+            </li>
+        {% endfor %}
+      </ul>
     </div>
   </div>
 {% endwith %}
