--- a/ckan/custom_templates/snippets/package_item.html
+++ b/ckan/custom_templates/snippets/package_item.html
@@ -19,17 +19,18 @@ Example:
 {% set notes = h.markdown_extract(package.notes, extract_length=truncate) %}
 
 <li class="dataset--list-item">
+  <div class="dataset--list-cid">{{ package.id }}</div>
   {% block package_item_content %}
     <div class="dataset--list-content">
       <h3 class="dataset--list-header">{{ h.link_to(h.truncate(title, truncate_title), h.url_for(controller='package', action='read', id=package.name)) }}</h3>
-     {% if notes %}
+      {% if notes %}
         {{ notes|urlize }}
       {% else %}
         <p class="empty">{{ _("This dataset has no description") }}</p>
       {% endif %}
     </div>
     <div class="dataset--list-footer">
-      <a href="#" class="dataset--list-comments-link">12 kommentarer</a>|<a href="dataset.php" class="dataset--list-read-more">Se datasættet</a>
+      <a href="#" class="dataset--list-comments-link">-- kommentarer</a>|<a href="{{ h.url_for(controller='package', action='read', id=package.name)) }}" class="dataset--list-read-more">Se datasættet</a>
     {% if package.resources and not hide_resources %}
       <ul class="dataset--list-tags">
         {% for resource in h.dict_list_reduce(package.resources, 'format') %}
