--- a/ckan/custom_templates/snippets/package_item.html
+++ b/ckan/custom_templates/snippets/package_item.html
@@ -18,8 +18,7 @@ Example:
 {% set title = package.title or package.name %}
 {% set notes = h.markdown_extract(package.notes, extract_length=truncate) %}
 
-<li class="dataset--list-item">
-  <div class="dataset--list-cid">{{ package.id }}</div>
+<li class="dataset--list-item" data-hash="{{ package.id }}">
   {% block package_item_content %}
     <div class="dataset--list-content">
       <h3 class="dataset--list-header">{{ h.link_to(h.truncate(title, truncate_title), h.url_for(controller='package', action='read', id=package.name)) }}</h3>
