--- a/ckan/custom_templates/package/snippets/resources_list.html
+++ b/ckan/custom_templates/package/snippets/resources_list.html
@@ -1,7 +1,7 @@
 <section class="dataset--data-resources">
   <h2 class="section-title">{{ _('Data and Resources') }}</h2>
   {% if resources %}
-    <ul class="dataset--list">
+    <ul class="dataset--data-resources--list">
       {% for resource in resources %}
         {% snippet 'package/snippets/resource_item.html', pkg=pkg, res=resource %}
       {% endfor %}
