--- a/ckan/custom_templates/package/snippets/resources.html
+++ b/ckan/custom_templates/package/snippets/resources.html
@@ -13,14 +13,16 @@ Example:
 #}
 {% set resources = pkg.resources or [] %}
 {% if resources %}
-  <section class="dataset--data-resources">
-    <h2 class="section-title"><i class="icon-copy"></i> {{ _("Resources") }}</h2>
-    <ul class="dataset--data-resources--list">
-      {% for resource in resources %}
-        <li class="nav-item{{ ' active' if active == resource.id }}">
-          {% link_for h.resource_display_name(resource)|truncate(25), controller='package', action=action or 'resource_read', id=pkg.name, resource_id=resource.id, inner_span=true %}
-        </li>
-      {% endfor %}
-    </ul>
-  </section>
+  <div class="spotbox">
+    <div class="spotbox--inner">
+      <h2 class="spotbox--header"><i class="icon-copy"></i> {{ _("Resources") }}</h2>
+      <ul class="spotbox--list">
+        {% for resource in resources %}
+          <li class="nav-item{{ ' active' if active == resource.id }}">
+            {% link_for h.resource_display_name(resource)|truncate(25), controller='package', action=action or 'resource_read', id=pkg.name, resource_id=resource.id, inner_span=true %}
+          </li>
+        {% endfor %}
+      </ul>
+    </div>
+  </div>
 {% endif %}
